--- a/src/DotNetBlog.Web/Pages/FetchData.razor
+++ b/src/DotNetBlog.Web/Pages/FetchData.razor
@@ -1,14 +1,13 @@
 ﻿@page "/fetchdata"
-@using DotNetBlog.Web.Data
-@inject WeatherForecastService ForecastService
+@using DotNetBlog.Web.Components.Article
+@using MediatR
+@using DotNetBlog.Application.Handlers.Article
+@using DotNetBlog.Application.TransferObjects
+@inject IMediator _mediator;
 
 <PageTitle>Weather forecast</PageTitle>
 
-<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from a service.</p>
-
-@if (forecasts == null)
+@if (articles == null)
 {
     <p>
         <em>Loading...</em>
@@ -16,34 +15,26 @@
 }
 else
 {
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var forecast in forecasts)
-        {
-            <tr>
-                <td>@forecast.Date.ToShortDateString()</td>
-                <td>@forecast.TemperatureC</td>
-                <td>@forecast.TemperatureF</td>
-                <td>@forecast.Summary</td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    @foreach (var article in articles!)
+    {
+        <ArticlePreview
+            Title="@article.Title"
+            Description="@article.Description"
+            AuthorName="@article.AuthorName">
+        </ArticlePreview>
+    }
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+
+    private IReadOnlyCollection<ArticleDto>? articles { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateOnly.FromDateTime(DateTime.Now));
+        ArticlesQuery articlesQuery = new ArticlesQuery(0, 100);
+
+        PagedResultDto<ArticleDto> pagedResult = await _mediator.Send(articlesQuery);
+
+        articles = pagedResult.Data;
     }
 }
