--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -10,18 +10,17 @@
 
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3 bg-dark">
-
         <div class="container-fluid">
             <div class="border border-2" style="box-sizing: border-box; margin-right: 5px">
                 <text style="color: darkorange; font-weight: bold; margin: 6px;">MU</text>
             </div>
-            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" @onclick="ToggleNavMenu"
                     aria-expanded="false" aria-label="Toggle navigation" style="color: white;">
                 <span class="navbar-toggler-icon">
                     
                 </span>
             </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            <div class="navbar-collapse @NavMenuCssClass d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
 
                     <li class="nav-item">
