--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -1,59 +1,34 @@
-﻿@* <div class="top-row ps-3 navbar navbar-dark"> *@
-@*     <div class="container-fluid"> *@
-@*         <a class="navbar-brand" href="">DotNetBlog.Web</a> *@
-@*         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu"> *@
-@*             <span class="navbar-toggler-icon"></span> *@
-@*         </button> *@
-@*     </div> *@
-@* </div> *@
-
-
-<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3 bg-dark">
+﻿<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple">
         <div class="container-fluid">
             <div class="border border-2" style="box-sizing: border-box; margin-right: 5px">
-                <text style="color: darkorange; font-weight: bold; margin: 6px;">MU</text>
+                <text style="color: black; font-weight: bold; margin: 8px;">dotnet blog</text>
             </div>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" @onclick="ToggleNavMenu"
                     aria-expanded="false" aria-label="Toggle navigation" style="color: white;">
                 <span class="navbar-toggler-icon">
-                    
+
                 </span>
             </button>
             <div class="navbar-collapse @NavMenuCssClass d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
+                <ul class="navbar-nav">
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="fetchdata">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Articles
+                        </NavLink>
+                    </div>
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                                 <span class="oi oi-list-rich" aria-hidden="true"></span> About
+                        </NavLink>
+                    </div>
 
-                    <li class="nav-item">
-                        <a class="nav-link text-light fw-bold" asp-area="" asp-controller="About" asp-action="Index">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light fw-bold" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-
-@* <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu"> *@
-@*     <nav class="flex-column"> *@
-@*         <div class="nav-item px-3"> *@
-@*             <NavLink class="nav-link" href="" Match="NavLinkMatch.All"> *@
-@*                 <span class="oi oi-home" aria-hidden="true"></span> Home *@
-@*             </NavLink> *@
-@*         </div> *@
-@*         <div class="nav-item px-3"> *@
-@*             <NavLink class="nav-link" href="counter"> *@
-@*                 <span class="oi oi-plus" aria-hidden="true"></span> Counter *@
-@*             </NavLink> *@
-@*         </div> *@
-@*         <div class="nav-item px-3"> *@
-@*             <NavLink class="nav-link" href="fetchdata"> *@
-@*                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data *@
-@*             </NavLink> *@
-@*         </div> *@
-@*     </nav> *@
-@* </div> *@
 
 @code {
     private bool collapseNavMenu = true;
