--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -1,17 +1,17 @@
 ﻿<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple;">
         <div class="container-fluid">
-            <div class="border border-2" style="box-sizing: border-box; margin-right: 5px">
-                <text style="color: black; font-weight: bold; margin: 8px;">dotnet blog</text>
+            <div>
+                <text style="color: black; margin: 5px; font-size: x-large; font-weight: bold;">📚 dotnet blog 📚</text>
             </div>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" @onclick="ToggleNavMenu"
-                    aria-expanded="false" aria-label="Toggle navigation" style="color: white;">
+                    aria-expanded="false" aria-label="Toggle navigation" style="color: black;">
                 <span class="navbar-toggler-icon">
 
                 </span>
             </button>
-            <div class="navbar-collapse @NavMenuCssClass d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav">
+            <div class="navbar-collapse @NavMenuCssClass d-sm-inline-flex justify-content-between oi-align-right">
+                <ul class="navbar-nav" style="margin-top: 13px">
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="fetchdata">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Articles
