--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -2,24 +2,30 @@
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple;">
         <div class="container-fluid">
             <div>
-                <text style="color: black; margin: 5px; font-size: x-large; font-weight: bold;">📚 dotnet blog 📚</text>
+                <text style="color: black; margin: 5px; font-size: x-large; font-weight: bold;">.NET blog 📚</text>
             </div>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" @onclick="ToggleNavMenu"
-                    aria-expanded="false" aria-label="Toggle navigation" style="color: black;">
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
 
                 </span>
             </button>
-            <div class="navbar-collapse @NavMenuCssClass d-sm-inline-flex justify-content-between oi-align-right">
+            <div class="navbar-collapse @NavMenuCssClass justify-content-between">
                 <ul class="navbar-nav" style="margin-top: 13px">
-                    <div class="nav-item px-3">
+                    <div class="nav-item px-2">
                         <NavLink class="nav-link" href="fetchdata">
-                            <span class="oi oi-list-rich" aria-hidden="true"></span> Articles
+                            <text style="color: black; font-size: large; margin-left: 5px">News</text>
                         </NavLink>
                     </div>
-                    <div class="nav-item px-3">
+                    <div class="nav-item px-2">
+                        <NavLink class="nav-link" href="fetchdata">
+                            <text style="color: black; font-size: large; margin-left: 5px">Articles</text>
+                        </NavLink>
+                    </div>
+                    <div class="nav-item px-2">
                         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                                 <span class="oi oi-list-rich" aria-hidden="true"></span> About
+
+                            <text style="color: black; font-size: large; margin-left: 5px">About</text>
                         </NavLink>
                     </div>
 
