--- a/src/DotNetBlog.Web/Shared/Footer.razor
+++ b/src/DotNetBlog.Web/Shared/Footer.razor
@@ -1,9 +1,10 @@
-﻿<footer class="page-footer font-small bg-dark" style=" position: fixed;
-                                                          bottom: 0;
-                                                          width: 100%;
-                                                          height: 2rem;">
+﻿<footer style=" position: absolute;
+                   left: 0;
+                   bottom: 0;
+                   width: 100%;
+                   overflow: hidden;">
 
-    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple; font-weight: bold">
+    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple; font-weight: bold; margin-top: 2rem">
         © 2022 Copyright:
         <text>.NET blog</text>
     </div>
