--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -13,18 +13,18 @@
             <div class="navbar-collapse @NavMenuCssClass justify-content-between">
                 <ul class="navbar-nav" style="margin-top: 13px">
                     <div class="nav-item px-2">
-                        <NavLink class="nav-link" href="fetchdata">
+                        <NavLink class="nav-link" href="news" Match="NavLinkMatch.All">
                             <text style="color: black; font-size: large; margin-left: 5px">News</text>
                         </NavLink>
                     </div>
                     <div class="nav-item px-2">
-                        <NavLink class="nav-link" href="fetchdata">
+                        <NavLink class="nav-link" href="articles">
                             <text style="color: black; font-size: large; margin-left: 5px">Articles</text>
                         </NavLink>
                     </div>
                     <div class="nav-item px-2">
-                        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-
+                        <NavLink class="nav-link" href="about">
+                    
                             <text style="color: black; font-size: large; margin-left: 5px">About</text>
                         </NavLink>
                     </div>
