--- a/src/DotNetBlog.Web/Shared/Footer.razor
+++ b/src/DotNetBlog.Web/Shared/Footer.razor
@@ -2,10 +2,12 @@
                    left: 0;
                    bottom: 0;
                    width: 100%;
-                   overflow: hidden;">
+                   overflow: hidden;
+                   margin-top: 1rem">
 
-    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple; font-weight: bold; margin-top: 2rem">
-        © 2022 Copyright:
-        <text>.NET blog</text>
+    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple; margin-top: 2rem">
+        <div style="color: white">
+            <text> © 2022 Copyright: .NET blog</text>
+        </div>
     </div>
 </footer>
