--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -1,35 +1,33 @@
 ﻿<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple;">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple; padding-bottom: 0; padding-top: 0;">
         <div class="container-fluid">
             <div>
-                <text style="color: black; margin: 5px; font-size: x-large; font-weight: bold;">.NET blog 📚</text>
+                <text style="color: black; margin: 5px; font-size: x-large; font-weight: bold;">.NET blog ⚙️</text>
             </div>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" @onclick="ToggleNavMenu"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    aria-expanded="false" aria-label="Toggle navigation" style="margin-bottom: 0.5rem; margin-top: 0.5rem;">
                 <span class="navbar-toggler-icon">
-
                 </span>
             </button>
+
             <div class="navbar-collapse @NavMenuCssClass justify-content-between">
-                <ul class="navbar-nav" style="margin-top: 13px">
-                    <div class="nav-item px-2">
+                <ul class="navbar-nav">
+                    <div class="nav-item px-2" style="padding-bottom: 0;">
                         <NavLink class="nav-link" href="news" Match="NavLinkMatch.All">
-                            <text style="color: black; font-size: large; margin-left: 5px">News</text>
+                            <text style="color: white; margin-left: 5px">News</text>
                         </NavLink>
                     </div>
-                    <div class="nav-item px-2">
+                    <div class="nav-item px-2" style="padding-bottom: 0;">
                         <NavLink class="nav-link" href="articles">
-                            <text style="color: black; font-size: large; margin-left: 5px">Articles</text>
+                            <text style="color: white; margin-left: 5px">Articles</text>
                         </NavLink>
                     </div>
-                    <div class="nav-item px-2">
+                    <div class="nav-item px-2" style="padding-bottom: 0;">
                         <NavLink class="nav-link" href="about">
-                    
-                            <text style="color: black; font-size: large; margin-left: 5px">About</text>
+            
+                            <text style="color: white; margin-left: 5px">About</text>
                         </NavLink>
                     </div>
-
-
                 </ul>
             </div>
         </div>
