--- a/src/DotNetBlog.Web/Shared/NavMenu.razor.css
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor.css
@@ -18,6 +18,11 @@
     top: -2px;
 }
 
+.form-check-input:checked {
+    background-color: darkblue;
+    border-color: black;
+}
+
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
