--- a/src/DotNetBlog.Web/wwwroot/css/site.css
+++ b/src/DotNetBlog.Web/wwwroot/css/site.css
@@ -4,6 +4,16 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.light-mode {
+    background-color: white;
+    color: black;
+}
+
 html {
     position: relative;
     min-height: 100%;
