add theme switcher

--- a/src/DotNetBlog.Web/Pages/_Host.cshtml
+++ b/src/DotNetBlog.Web/Pages/_Host.cshtml
@@ -3,7 +3,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @namespace DotNetBlog.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject ThemeProvider _ThemeProvider;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,7 +16,7 @@
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
-<body class="@_ThemeProvider.GetStyle()">
+<body>
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
 
 <div id="blazor-error-ui">
