add theme switcher

--- a/src/DotNetBlog.Web/Shared/Footer.razor
+++ b/src/DotNetBlog.Web/Shared/Footer.razor
@@ -6,7 +6,7 @@
                    margin-top: 1rem">
 
     <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple; margin-top: 2rem">
-        <div style="color: white">
+        <div style="color:  #dadada;">
             <text> © 2022 Copyright: .NET blog</text>
         </div>
     </div>
