--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 @inject ThemeProvider _ThemeProvider;
 
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple; padding-bottom: 0; padding-top: 0;">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: purple; padding-bottom: 0; padding-top: 0; margin-bottom: 0">
         <div class="container-fluid">
             <div>
                 <text style="color: black; margin: 5px; font-size: x-large; font-weight: bold;">.NET blog ⚙️</text>
@@ -18,18 +18,18 @@
                 <ul class="navbar-nav w-100">
                     <div class="nav-item px-2" style="padding-bottom: 0;">
                         <NavLink class="nav-link" href="news" Match="NavLinkMatch.All">
-                            <text style="color: white; margin-left: 5px">News</text>
+                            <text style="color: #dadada; margin-left: 5px">News</text>
                         </NavLink>
                     </div>
                     <div class="nav-item px-2" style="padding-bottom: 0;">
                         <NavLink class="nav-link" href="articles">
-                            <text style="color: white; margin-left: 5px">Articles</text>
+                            <text style="color: #dadada; margin-left: 5px">Articles</text>
                         </NavLink>
                     </div>
                     <div class="nav-item px-2" style="padding-bottom: 0;">
                         <NavLink class="nav-link" href="about">
 
-                            <text style="color: white; margin-left: 5px">About</text>
+                            <text style="color: #dadada; margin-left: 5px">About</text>
                         </NavLink>
                     </div>
                     <div class="nav-item form-check form-switch ms-auto" style="padding-bottom: 0; padding-top: 12px;">
@@ -39,29 +39,14 @@
                             width="25"
                             height="25"
                             fill="currentColor"
-                            class="bi bi-brightness-high @SunImageCssClass"
+                            class="bi bi-brightness-high"
                             style="margin-left: 5px"
                             viewBox="0 0 16 16">
                             <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
                         </svg>
+                        
 
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                             width="23"
-                             height="23"
-                             fill="currentColor"
-                             class="bi bi-moon @MoonImageCssClass"
-                             style="margin-left: 5px"
-                             viewBox="0 0 16 16">
-                            <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z"/>
-                        </svg>
-
-
-                        <label class="form-check-label ms-3" for="lightSwitch">
-
-
-                        </label>
-
-                        <input class="form-check-input" type="checkbox" id="lightSwitch" onclick="@ThemeChanged"/>
+                        <input class="form-check-input" type="checkbox" id="lightSwitch" style="background-color: #3f3f3f" onclick="@ThemeChanged"/>
                     </div>
                 </ul>
             </div>
@@ -76,8 +61,6 @@
     private bool darkTheme = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-    private string? SunImageCssClass => darkTheme ? "d-none" : null;
-    private string? MoonImageCssClass => darkTheme ? null : "d-none";
 
     [Parameter]
     public EventCallback OnThemeChanged { get; set; }
