--- a/src/DotNetBlog.Web/wwwroot/css/site.css
+++ b/src/DotNetBlog.Web/wwwroot/css/site.css
@@ -19,6 +19,10 @@ html, body {
     border: 1px solid !important;
 }
 
+.mb-3 {
+    margin-bottom: 0 !important;
+}
+
 html {
     position: relative;
     min-height: 100%;
