add theme switcher

--- a/src/DotNetBlog.Web/Pages/Articles.razor
+++ b/src/DotNetBlog.Web/Pages/Articles.razor
@@ -5,7 +5,7 @@
 @using DotNetBlog.Application.TransferObjects
 @inject IMediator _mediator;
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Articles</PageTitle>
 
 @if (articles == null)
 {
