--- a/src/DotNetBlog.Web/Shared/Footer.razor
+++ b/src/DotNetBlog.Web/Shared/Footer.razor
@@ -3,9 +3,9 @@
                    bottom: 0;
                    width: 100%;
                    overflow: hidden;
-                   margin-top: 1rem">
+                 ">
 
-    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple; margin-top: 2rem">
+    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple;">
         <div style="color:  #dadada;">
             <text> © 2022 Copyright: .NET blog</text>
         </div>
