--- a/src/DotNetBlog.Web/Pages/Articles.razor
+++ b/src/DotNetBlog.Web/Pages/Articles.razor
@@ -15,7 +15,7 @@
 }
 else
 {
-    <div class="container">
+    <div class="container" style="margin-top: 48px;">
 
         @foreach (var article in articles!)
         {
