--- a/src/DotNetBlog.Web/Pages/News.razor
+++ b/src/DotNetBlog.Web/Pages/News.razor
@@ -1,7 +1,6 @@
 ﻿@page "/news"
 @using DotNetBlog.Web.Components
 @using MediatR
-@using DotNetBlog.Application.Handlers.Article
 @using DotNetBlog.Application.Handlers.News
 @using DotNetBlog.Application.TransferObjects
 @inject IMediator _mediator;
@@ -18,12 +17,13 @@ else
 {
     <div class="container" style="margin-top: 48px;">
 
-        @foreach (var newsItem in news!)
+        @foreach (NewsDto newsItem in news!)
         {
             <div class="row col-sm-12 col-md-11 col-lg" style="margin-bottom: 2rem;">
                 <NewsItem
                     Title="@newsItem.Title"
-                    Description="@newsItem.Description">
+                    Content="@newsItem.Content"
+                    CreatedOn="@newsItem.CreatedOn">
                 </NewsItem>
             </div>
         }
