some css polish

--- a/src/DotNetBlog.Web/Shared/MainLayout.razor
+++ b/src/DotNetBlog.Web/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
 <PageTitle>DotNetBlog.Web</PageTitle>
 
 <NavMenu OnThemeChanged="@OnThemeChanged"/>
-<div class="page" style="margin-bottom: 2rem;">
+<div class="page dark-theme" style="margin-bottom: 2rem; height: 100%">
 
     <main class="@_ThemeProvider.GetStyle()">
 
