--- a/src/DotNetBlog.Web/Pages/Articles.razor
+++ b/src/DotNetBlog.Web/Pages/Articles.razor
@@ -15,12 +15,13 @@
 }
 else
 {
-    <div class="container" style="margin-top: 48px;">
+    <div class="blog-tab container">
 
         @foreach (var article in articles!)
         {
-            <div class="row col-sm-12 col-md-11 col-lg-10" style="margin-bottom: 2rem;">
+            <div class="article-preview row col-sm-12 col-md-11 col-lg-10">
                 <ArticlePreview
+                    Id="@article.Id"
                     Title="@article.Title"
                     Description="@article.Description"
                     AuthorName="@article.AuthorName"
