--- a/src/DotNetBlog.Web/Pages/News.razor
+++ b/src/DotNetBlog.Web/Pages/News.razor
@@ -15,7 +15,7 @@
 }
 else
 {
-    <div class="container" style="margin-top: 48px;">
+    <div class="blog-tab container" style="margin-top: 48px;">
 
         @foreach (NewsDto newsItem in news!)
         {
