some css polish

--- a/src/DotNetBlog.Web/Shared/Footer.razor
+++ b/src/DotNetBlog.Web/Shared/Footer.razor
@@ -5,7 +5,7 @@
                    overflow: hidden;
                  ">
 
-    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: purple;">
+    <div class="footer-copyright text-center py-2" style="font-size: small; background-color: #914D98;">
         <div style="color:  #dadada;">
             <text> © 2022 Copyright: .NET blog</text>
         </div>
