about component skeleton

--- a/src/DotNetBlog.Web/Pages/About.razor
+++ b/src/DotNetBlog.Web/Pages/About.razor
@@ -1,4 +1,26 @@
 ﻿@page "/about"
 
 <PageTitle>About</PageTitle>
-<h1>About</h1>
+
+<div class="container blog-tab">
+    <text>
+        Hello everyone, I'm Maxim Usatenko .NET developer from Ukraine and this is my personal blog about dotnet.
+        In this blog I want to share my thoughts, ideas, highlight important events in the dotnet world.
+
+    </text>
+
+  
+
+    <div class="card" style="max-height: 25rem; max-width: 24rem; margin-top: 2rem">
+        <div class="card-body">
+            <h5 class="card-title" style="font-weight: bold">E-mail</h5>
+            <p class="card-text"><a href="mailto: maxim.usat7@gmail.com">maxim.usat7@gmail.com</a></p>
+            <h5 class="card-title" style="font-weight: bold">LinkedIn</h5>
+            <p class="card-text"> <a href="https://www.linkedin.com/in/maxim-usatenko-02771a180/">Maxim Usatenko</a></p>
+            <h5 class="card-title" style="font-weight: bold">GitHub</h5>
+            <p class="card-text"><a href="https://github.com/MMaximus111/">MMaximus111</a></p>
+        </div>
+    </div>
+
+
+</div>
