--- a/src/DotNetBlog.Web/Shared/NavMenu.razor
+++ b/src/DotNetBlog.Web/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow mb-3" style="
-    background-color: #914D98;
+    background-color: #793f7e;
     padding-bottom: 0;
     padding-top: 0;
     margin-bottom: 0;
