--- a/src/DotNetBlog.Web/Shared/Footer.razor
+++ b/src/DotNetBlog.Web/Shared/Footer.razor
@@ -1,13 +1,13 @@
-﻿<footer style=" position: absolute;
+﻿<footer style="position: absolute;
                    left: 0;
                    bottom: 0;
                    width: 100%;
-                   overflow: hidden;
-                 ">
+                   margin-top: auto;
+                   overflow: hidden;">
 
     <div class="footer-copyright text-center py-2" style="font-size: small; background-color: #793f7e;">
         <div style="color:  #dadada;">
-            <text> © 2022 Copyright: .NET blog</text>
+            <text> © 2023 Copyright: .NET blog</text>
         </div>
     </div>
 </footer>
